tron (0.2.6-1) unstable; urgency=low

  * Support for functional testing. Fixes #49 (irskep)
  * Context variables for year, month and day. Fixes #57 (irskep)
  * Integrate Google App Engine Cron scheduling syntax. Fixes #71 (irskep)
  * Fix crash during service monitoring because of node connect failures. Fixes #77 (rhettg)
  * Make action runs explicitly not re-startable. Fixes #78 (rhettg)
  * Flush and fsync state file. Fixes #74
  
 -- Rhett Garber <rhettg@gmail.com>  Wed, 22 June 2011 13:24:00 -0800

tron (0.2.5-1) unstable; urgency=low

  * Introduce event collection system (rhettg)
  * Fix a crash in rebuilding all services under certain reconfig scenarios. Fixes #67 (rhettg)
  * Fix potential service situation where monitors would stop running after failures (rhettg)
  * Additional logging around startup failures (rhettg)
  
 -- Rhett Garber <rhettg@gmail.com>  Wed, 22 June 2011 13:24:00 -0800

tron (0.2.4-1) unstable; urgency=low

  * Final tronfig fix for stdout/stdin behavior (rhettg)
  
 -- Rhett Garber <rhettg@gmail.com>  Tue, 12 Apr 2011 10:50:00 -0800

tron (0.2.3-2) unstable; urgency=low

  * Made tronfig work with non-interactive uploads again. (jbrown)
  
 -- James Brown <jbrown@yelp.com>  Mon, 11 Apr 2011 22:06:56 -0700

tron (0.2.3-1) unstable; urgency=low

  * Resolved an issue where tronfig via stdin wouldn't catch all errors. (rhettg)
  * Provided additional config time validation to catch bad configurations. (rhettg)
  
 -- Rhett Garber <rhettg@gmail.com>  Thu, 7 Apr 2011 10:50:00 -0800

tron (0.2.2-1) unstable; urgency=low

  * Resolved an issue where certain service reconfigurations would 
    cause the service to be stuck in the DOWN state (rhettg)
  * Reworked service to keep consistant instance numbers across restarts 
    and reconfigs (rhettg)
  
 -- Rhett Garber <rhettg@gmail.com>  Wed, 23 Mar 2011 18:26:00 -0800

tron (0.2.1-1) unstable; urgency=low

  * Resolve an issue where run_time wasn't set for manually started jobs (rhettg)