@@ -5,7 +5,9 @@ tron (0.2.6-1) unstable; urgency=low
   * Integrate Google App Engine Cron scheduling syntax. Fixes #71 (irskep)
   * Fix crash during service monitoring because of node connect failures. Fixes #77 (rhettg)
   * Make action runs explicitly not re-startable. Fixes #78 (rhettg)
-  * Flush and fsync state file. Fixes #74
+  * Flush and fsync state file. Fixes #74 (rhettg)
+  * Handle node disconnect while waiting for channel to start. Fixes #75 (rhettg)
+
   
  -- Rhett Garber <rhettg@gmail.com>  Wed, 22 June 2011 13:24:00 -0800
 
